# sync-github-release-to-s3

./: Containerfile  README.md  compose.yaml  config.template.toml  github.py  main.py  pyproject.toml  sync.py  util.py
.github/workflows/: build-and-push.yml
