[project]
name = "upload-release-to-s3"
version = "0.1.0"
description = "Sync GitHub releases to S3 storage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=2.24.2",
    "apscheduler>=3.11.0",
    "boto3>=1.40.18",
    "httpx>=0.28.1",
    "types-aiobotocore[essential]>=2.24.2",
]

[tool.setuptools]
py-modules = ["main", "sync"]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 10001
