[project]
name = "sync-github-release-to-s3"
version = "0.1.0"
description = "Sync GitHub releases to S3 storage."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=2.24.2",
    "apscheduler>=3.11.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "tomlkit>=0.13.3",
    "types-aiobotocore[essential]>=2.24.2",
]

[tool.setuptools]
py-modules = ["main", "sync"]

[dependency-groups]
dev = []

[tool.ruff]
line-length = 320
